Release Notes
=============
==== post Jena 2.5.5

ReasonerFactoryAssembler
    o Now takes note of ja:schema properties & binds such a schema
      to the reasoners that the factory produces.

Typed literals:
    o Fixed bug in retrieval of decimal values with trailing fractional
      zeros by canonicalizing values after parsing and improving
      canonicalization.
      
Reasoners:
    o Modified @include processing and Rule.rulesFromURL to support 
      FileManager redirects.
    o Fixed problem withLPTopGoalIterator which caused one extra level
      of lookahead in some circumstances.
    
==== Jena 2.5.5

Jar changes:
    o lucene-core has been upgraded from lucene-core-2.0.0 to lucene-2.2.0.jar.
    o logging-commons-1.1.jar upgraded to logging-commons-1.1.1.jar 

Deprecated Method Removal Frenzy
    o A bunch of methods in Resource, Model, ModelCon, and Statement have
      for a while now been marked as deprecated. These methods took literal
      values for the object of a statement and used the old treat-it-as-a-string
      approach rather than the newer typed-literal approach.

    o These deprecated methods have been removed. However, to allow migrators
      an easier life and to avoid requiring many many calls of
      createTypedLiteral (which needs a model, not always conveniently to hand),
      typed-literal versions of these methods have been added to the interfaces.

    o Model has grown:

      * addLiteral( Resource, Property, Various )
      * listResourcesWithProperty( Property, Various )
      * createLiteralStatement( Resource, Property, Various )
      * listLiteralStatements( Resource, Property, Various )
      * listResourcesWithProperty( Property, Various )

    o Resource has grown:

      * addLiteral( Property, Various )
      * hasLiteral( Property, Various )

    o Statement has grown:

      * changeObject( Various )

      where `Various` is one of float, double, long,boolean, char, short,