@@ -51,9 +51,9 @@ CREATE TABLE ${c}graph (
  ID		INT NOT NULL PRIMARY KEY IDENTITY(1,1),
  Name		NVARCHAR(1024)
 ) ;;
-CREATE UNIQUE INDEX ${c}IXLIT ON ${c}LONG_LIT(Head,ChkSum);;
-CREATE UNIQUE INDEX ${c}IXURI ON ${c}LONG_URI(Head,ChkSum);;
-CREATE UNIQUE INDEX ${c}IXBND ON ${c}PREFIX(Head,ChkSum);;
+CREATE UNIQUE INDEX ${c}IXLIT ON ${c}long_lit(Head,ChkSum);;
+CREATE UNIQUE INDEX ${c}IXURI ON ${c}long_uri(Head,ChkSum);;
+CREATE UNIQUE INDEX ${c}IXBND ON ${c}prefix(Head,ChkSum);;
 CREATE INDEX ${c}IXSP ON ${c}sys_stmt(Subj, Prop);;
 CREATE INDEX ${c}IXO ON ${c}sys_stmt(Obj);;
 
